force-app/main/default/objects/DynamicDataTableItem__mdt/DynamicDataTableItem__mdt.object-meta.xml
<CustomObject>
    <description>Dynamic data table fields based on the label selected</description>
    <label>DynamicDataTableItem</label>
    <pluralLabel>DynamicDataTableItems</pluralLabel>
</CustomObject>