force-app/main/default/objects/DynamicDataTableItem__mdt/fields/CellAttributes__c.field-meta.xml
<CustomField>
    <fullName>CellAttributes__c</fullName>
    <description>CellAttributes of the data column</description>
    <label>CellAttributes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>