force-app/main/default/objects/DynamicDataTableItem__mdt/fields/DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>DisplayOrder__c</fullName>
    <description>Display Order of the columns</description>
    <label>DisplayOrder</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>