force-app/main/default/objects/DynamicDataTableItem__mdt/fields/DynamicDataTable__c.field-meta.xml
<CustomField>
    <fullName>DynamicDataTable__c</fullName>
    <description
  >Master table to list the layout name or data table name</description>
    <label>DynamicDataTable</label>
    <referenceTo>DynamicDataTable__mdt</referenceTo>
    <relationshipLabel>DynamicDataTableItems</relationshipLabel>
    <relationshipName>DynamicDataTableItems</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>