force-app/main/default/objects/DynamicDataTableItem__mdt/fields/FieldName__c.field-meta.xml
<CustomField>
    <fullName>FieldName__c</fullName>
    <description>The field Name on which data needs to be queried</description>
    <label>Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>