force-app/main/default/objects/DynamicDataTableItem__mdt/fields/ParentObjectAPI__c.field-meta.xml
<CustomField>
    <fullName>ParentObjectAPI__c</fullName>
    <description>Parent Object name for fetching the field</description>
    <label>ParentObjectAPI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>