force-app/main/default/objects/DynamicDataTableItem__mdt/fields/TextAttributes__c.field-meta.xml
<CustomField>
    <fullName>TextAttributes__c</fullName>
    <description
  >Type attributes for the fields to be used as columns</description>
    <label>TextAttributes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>