force-app/main/default/objects/DynamicDataTableItem__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>type of the fieldname that needs to be fetched</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>text</fullName>
                <default>true</default>
                <label>text</label>
            </value>
            <value>
                <fullName>date</fullName>
            </value>
            <value>
                <fullName>phone</fullName>
            </value>
            <value>
                <fullName>url</fullName>
            </value>
            <value>
                <fullName>action</fullName>
            </value>
            <value>
                <fullName>button</fullName>
            </value>
            <value>
                <fullName>button-icon</fullName>
            </value>
            <value>
                <fullName>customText</fullName>
            </value>            
        </valueSetDefinition>
    </valueSet>
</CustomField>