force-app/main/default/objects/DynamicDataTableItem__mdt/listViews/MintFlow.listView-meta.xml
<ListView>
    <fullName>MintFlow</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>DisplayOrder__c</columns>
    <columns>DynamicDataTable__c</columns>
    <columns>FieldName__c</columns>
    <columns>ParentObjectAPI__c</columns>
    <columns>Type__c</columns>
    <columns>CellAttributes__c</columns>
    <columns>TextAttributes__c</columns>
    <filterScope>Everything</filterScope>
    <label>MintFlow</label>
    <language>en_US</language>
</ListView>